changed font size side bar, changed most values to em instead of px, fixed alignment issues. Side bborder broken now due to changes in padding and margins, need to fix this.

--- a/style/style.css
+++ b/style/style.css
@@ -120,7 +120,7 @@
 }
 
 .bordermenu {
-	padding-top: 38px;
+	padding-top: 2.499em;
 	padding-left: 5px;
 	border-left: solid 1px #C6DACB;
 	
@@ -150,9 +150,13 @@
  	border-width: 2px 8px 2px 2px ;
  	border-style: solid;
  	border-color: #C6DACB;
- 	padding: 0.5em 0.5em 0.5em 0.75em;
+ 	padding: 1.7em 0.5em 0.5em 0.75em;
+	font-size: 0.8333em;
+	line-height: 1.8em;
  	
 }
+
+.block h3 { margin-bottom: 1.333em;}
 
 #top {
 	border-bottom: solid 1px #C6DACB;
@@ -203,5 +207,5 @@
 
 body {line-height: 18px;}
 
-.view-content {margin-top: 0.5em;}
+.view-content{}
 .view-content img{margin-bottom: 0.5em;} 
